--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgba(23, 114, 117, 0.377);
 }
 div{
+    padding-top: 100px;
     margin: auto;
     display: flex;
     justify-content: center;
